--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1115,5 +1115,25 @@
     "landingpage_pagebuilder_image_upload_exceeds_file_size_error": "The image exceeds the 5 MB limit and cannot be uploaded!",
     "@landingpage_pagebuilder_image_upload_exceeds_file_size_error": {
         "description": "Error message that appears in the page builder when you want to upload an image that is larger than 5 MB"
+    },
+    "landingpage_pagebuilder_unload_alert_message": "Do you really want to leave the site? Changes that are not saved will be lost.",
+    "@landingpage_pagebuilder_unload_alert_message": {
+        "description": "Error message for the alert on the page builder page, which is called when you want to leave the page and have not saved."
+    },
+    "landingpage_pagebuilder_leave_alert_title": "Leave page?",
+    "@landingpage_pagebuilder_leave_alert_title": {
+        "description": "Error title for the alert on the page builder page, which is called when you want to leave the page and have not saved."
+    },
+    "landingpage_pagebuilder_leave_alert_message": "Are you sure you want to leave the page?\nUnsaved changes will be lost.",
+    "@landingpage_pagebuilder_leave_alert_message": {
+        "description": "Error message for the alert on the page builder page, which is called when you want to leave the page and have not saved."
+    },
+    "landingpage_pagebuilder_leave_alert_button_title": "Leave",
+    "@landingpage_pagebuilder_leave_alert_button_title": {
+        "description": "Button title for the alert on the page builder page, which is called when you want to leave the page and have not saved."
+    },
+    "landingpage_pagebuilder_leave_alert_cancel_button_title": "Cancel",
+    "@landingpage_pagebuilder_leave_alert_cancel_button_title": {
+        "description": "Cancel button title for the alert on the page builder page, which is called when you want to leave the page and have not saved."
     }
 }
