--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1115,5 +1115,25 @@
     "landingpage_pagebuilder_image_upload_exceeds_file_size_error": "Das Bild überschreitet die 5 MB Grenze und kann nicht hochgeladen werden!",
     "@landingpage_pagebuilder_image_upload_exceeds_file_size_error": {
         "description": "Fehlermeldung die im Pagebuilder erscheint, wenn man ein Bild hochladen möchte das größer als 5 MB ist"
+    },
+    "landingpage_pagebuilder_unload_alert_message": "Willst du die Seite wirklich verlassen? Nicht gespeicherte Änderungen gehen verloren.",
+    "@landingpage_pagebuilder_unload_alert_message": {
+        "description": "Fehlermeldung für den Alert auf der Pagebuilder Seite, der aufgerufen wird wenn man die Seite verlassen möchte und nicht gespeichert hat."
+    },
+    "landingpage_pagebuilder_leave_alert_title": "Seite verlassen?",
+    "@landingpage_pagebuilder_leave_alert_title": {
+        "description": "Fehler Titel für den Alert auf der Pagebuilder Seite, der aufgerufen wird wenn man die Seite verlassen möchte und nicht gespeichert hat."
+    },
+    "landingpage_pagebuilder_leave_alert_message": "Möchtest du die Seite wirklich verlassen?\nNicht gespeicherte Änderungen gehen verloren.",
+    "@landingpage_pagebuilder_leave_alert_message": {
+        "description": "Fehlermeldung für den Alert auf der Pagebuilder Seite, der aufgerufen wird wenn man die Seite verlassen möchte und nicht gespeichert hat."
+    },
+    "landingpage_pagebuilder_leave_alert_button_title": "Verlassen",
+    "@landingpage_pagebuilder_leave_alert_button_title": {
+        "description": "Button Titel für den Alert auf der Pagebuilder Seite, der aufgerufen wird wenn man die Seite verlassen möchte und nicht gespeichert hat."
+    },
+    "landingpage_pagebuilder_leave_alert_cancel_button_title": "Abbrechen",
+    "@landingpage_pagebuilder_leave_alert_cancel_button_title": {
+        "description": "Abbrechen Button Titel für den Alert auf der Pagebuilder Seite, der aufgerufen wird wenn man die Seite verlassen möchte und nicht gespeichert hat."
     }
 }
