--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -240,9 +240,13 @@
     "@landingpage_snackbar_success_duplicated": {
         "description": "The title of the snackbar when a landing page is duplicated"
     },
-    "landingpage_snackbar_success_troggled": "The landing page was successfully toggled!",
-    "@landingpage_snackbar_success_troggled": {
-        "description": "The title of the snackbar when a landing page has been activated/deactivated"
+    "landingpage_snackbar_success_troggled_enabled": "The landing page was successfully enabled!",
+    "@landingpage_snackbar_success_troggled_enabled": {
+        "description": "The title of the snackbar when a landing page has been deactivated"
+    },
+    "landingpage_snackbar_success_troggled_disabled": "The landing page was successfully disabled!",
+    "@landingpage_snackbar_success_troggled_disabled": {
+        "description": "The title of the snackbar when a landing page has been activated"
     },
     "landingpage_overview_context_menu_disable": "disable",
     "@landingpage_overview_context_menu_disable": {
