--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -240,13 +240,17 @@
     "@landingpage_snackbar_success_duplicated": {
         "description": "Der Titel der Snackbar wenn eine Landingpage dupliziert wurde"
     },
-    "landingpage_snackbar_success_troggled_enabled": "Die Landingpage wurde erfolgreich aktiviert!",
-    "@landingpage_snackbar_success_troggled_enabled": {
+    "landingpage_snackbar_success_toggled_enabled": "Die Landingpage wurde erfolgreich aktiviert!",
+    "@landingpage_snackbar_success_toggled_enabled": {
         "description": "Der Titel der Snackbar wenn eine Landingpage aktiviert wurde"
     },
-    "landingpage_snackbar_success_troggled_disabled": "Die Landingpage wurde erfolgreich deaktiviert!",
-    "@landingpage_snackbar_success_troggled_disabled": {
+    "landingpage_snackbar_success_toggled_disabled": "Die Landingpage wurde erfolgreich deaktiviert!",
+    "@landingpage_snackbar_success_toggled_disabled": {
         "description": "Der Titel der Snackbar wenn eine Landingpage aktiviert wurde"
+    },
+    "landingpage_snackbar_failure_toggled": "Beim umstellen der Landingpage ist ein Fehler aufgetreten",
+    "@landingpage_snackbar_failure_toggled": {
+        "description": "Der Titel der Snackbar wenn ein Fehler bei der Umstellung (aktivieren/deaktivieren) der Landingpage auftritt"
     },
     "landingpage_overview_context_menu_disable": "deaktivieren",
     "@landingpage_overview_context_menu_disable": {
