--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -240,13 +240,17 @@
     "@landingpage_snackbar_success_duplicated": {
         "description": "The title of the snackbar when a landing page is duplicated"
     },
-    "landingpage_snackbar_success_troggled_enabled": "The landing page was successfully enabled!",
-    "@landingpage_snackbar_success_troggled_enabled": {
+    "landingpage_snackbar_success_toggled_enabled": "The landing page was successfully enabled!",
+    "@landingpage_snackbar_success_toggled_enabled": {
         "description": "The title of the snackbar when a landing page has been deactivated"
     },
-    "landingpage_snackbar_success_troggled_disabled": "The landing page was successfully disabled!",
-    "@landingpage_snackbar_success_troggled_disabled": {
+    "landingpage_snackbar_success_toggled_disabled": "The landing page was successfully disabled!",
+    "@landingpage_snackbar_success_toggled_disabled": {
         "description": "The title of the snackbar when a landing page has been activated"
+    },
+    "landingpage_snackbar_failure_toggled": "An error occurred while toggle the landing page",
+    "@landingpage_snackbar_failure_toggled": {
+        "description": "The title of the snackbar when an error occurs while toggle the landingpage"
     },
     "landingpage_overview_context_menu_disable": "disable",
     "@landingpage_overview_context_menu_disable": {
