--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1175,5 +1175,25 @@
     "landingpage_pagebuilder_config_menu_unknown_type": "Unknown",
     "@landingpage_pagebuilder_config_menu_unknown_type": {
         "description": "Unknown title in the pagebuilder config menu"
+    },
+    "landingpage_pagebuilder_text_config_alignment": "Alignment",
+    "@landingpage_pagebuilder_text_config_alignment": {
+        "description": "menu entry in the pagebuilder text configuration"
+    },
+    "landingpage_pagebuilder_text_config_alignment_left": "left-align",
+    "@landingpage_pagebuilder_text_config_alignment_left": {
+        "description": "Tooltip for left alignment Button in text configuration"
+    },
+    "landingpage_pagebuilder_text_config_alignment_center": "center",
+    "@landingpage_pagebuilder_text_config_alignment_center": {
+        "description": "Tooltip for center alignment Button in text configuration"
+    },
+    "landingpage_pagebuilder_text_config_alignment_right": "right-align",
+    "@landingpage_pagebuilder_text_config_alignment_right": {
+        "description": "Tooltip for right alignment Button in text configuration"
+    },
+    "landingpage_pagebuilder_text_config_alignment_justify": "justify",
+    "@landingpage_pagebuilder_text_config_alignment_justify": {
+        "description": "Tooltip for justify alignment Button in text configuration"
     }
 }
