--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1176,6 +1176,10 @@
     "@landingpage_pagebuilder_config_menu_unknown_type": {
         "description": "Unknown title in the pagebuilder config menu"
     },
+    "landingpage_pagebuilder_text_config_text_title": "Text configuration",
+    "@landingpage_pagebuilder_text_config_text_title": {
+        "description": "Title for the collapsible view for the text configuration in the pagebuilder text configuration"
+    },
     "landingpage_pagebuilder_text_config_alignment": "Alignment",
     "@landingpage_pagebuilder_text_config_alignment": {
         "description": "menu entry in the pagebuilder text configuration"
@@ -1235,5 +1239,17 @@
     "landingpage_pagebuilder_text_config_shadow_alert_apply": "Apply",
     "@landingpage_pagebuilder_text_config_shadow_alert_apply": {
         "description": "Text for apply button in the text shadow alert in the text configuration"
+    },
+    "landingpage_pagebuilder_text_config_fontsize": "Font size",
+    "@landingpage_pagebuilder_text_config_fontsize": {
+        "description": "Text for font size in the text configuration"
+    },
+    "landingpage_pagebuilder_text_config_text_placeholder": "Type text here...",
+    "@landingpage_pagebuilder_text_config_text_placeholder": {
+        "description": "Placeholder for the textfield in the text configuration"
+    },
+    "landingpage_pagebuilder_text_config_content_title": "Text content",
+    "@landingpage_pagebuilder_text_config_content_title": {
+        "description": "Title for the collapsible view for the text content in the pagebuilder text configuration"
     }
 }
