--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1287,5 +1287,25 @@
     "landingpage_pagebuilder_layout_menu_margin": "Margin",
     "@landingpage_pagebuilder_layout_menu_margin": {
         "description": "Title margin menu in the Pagebuilder Config Menu in the layout area"
+    },
+    "landingpage_pagebuilder_layout_menu_image_control_title": "Background image",
+    "@landingpage_pagebuilder_layout_menu_image_control_title": {
+        "description": "Title background image menu in the Pagebuilder Config Menu in the background area"
+    },
+    "landingpage_pagebuilder_layout_menu_background_contentmode": "Content mode",
+    "@landingpage_pagebuilder_layout_menu_background_contentmode": {
+        "description": "Title contentmode menu in the Pagebuilder Config Menu in the background area"
+    },
+    "landingpage_pagebuilder_layout_menu_background_overlay": "Image overlay",
+    "@landingpage_pagebuilder_layout_menu_background_overlay": {
+        "description": "Title image overlay image menu in the Pagebuilder Config Menu in the background area"
+    },
+    "landingpage_pagebuilder_layout_menu_background": "Background",
+    "@landingpage_pagebuilder_layout_menu_background": {
+        "description": "Title background menu in the Pagebuilder Config Menu"
+    },
+    "landingpage_pagebuilder_layout_menu_background_color": "Background color",
+    "@landingpage_pagebuilder_layout_menu_background_color": {
+        "description": "Title background color image menu in the Pagebuilder Config Menu in the background area"
     }
 }
