--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1140,6 +1140,14 @@
     "@landingpage_pagebuilder_unload_alert_message": {
         "description": "Fehlermeldung für den Alert auf der Pagebuilder Seite, der aufgerufen wird wenn man die Seite verlassen möchte und nicht gespeichert hat."
     },
+    "landingpage_pagebuilder_config_menu_content_tab": "Inhalt",
+    "@landingpage_pagebuilder_config_menu_content_tab": {
+        "description": "Inhalt Tab Titel im Pagebuilder Config Menü"
+    },
+    "landingpage_pagebuilder_config_menu_design_tab": "Design",
+    "@landingpage_pagebuilder_config_menu_design_tab": {
+        "description": "Design Tab Titel im Pagebuilder Config Menü"
+    },
     "landingpage_pagebuilder_config_menu_container_type": "Container",
     "@landingpage_pagebuilder_config_menu_container_type": {
         "description": "Container Titel im Pagebuilder Config Menü"
