--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1232,6 +1232,10 @@
     "@landingpage_pagebuilder_text_config_shadow_alert_title": {
         "description": "Title for text shadow alert in the text configuration"
     },
+    "landingpage_pagebuilder_text_config_shadow_alert_spread_radius": "Spread radius",
+    "@landingpage_pagebuilder_text_config_shadow_alert_spread_radius": {
+        "description": "Text for spread radius in the text shadow alert in the text configuration"
+    },
     "landingpage_pagebuilder_text_config_shadow_alert_blur_radius": "Blur radius",
     "@landingpage_pagebuilder_text_config_shadow_alert_blur_radius": {
         "description": "Text for blur radius in the text shadow alert in the text configuration"
@@ -1296,6 +1300,10 @@
     "@landingpage_pagebuilder_layout_menu_margin": {
         "description": "Title margin menu in the Pagebuilder Config Menu in the layout area"
     },
+    "landingpage_pagebuilder_layout_menu_alignment": "Alignment",
+    "@landingpage_pagebuilder_layout_menu_alignment": {
+        "description": "Title alignment menu in the Pagebuilder Config Menu in the layout area"
+    },
     "landingpage_pagebuilder_layout_menu_image_control_title": "Background image",
     "@landingpage_pagebuilder_layout_menu_image_control_title": {
         "description": "Title background image menu in the Pagebuilder Config Menu in the background area"
@@ -1315,5 +1323,73 @@
     "landingpage_pagebuilder_layout_menu_background_color": "Background color",
     "@landingpage_pagebuilder_layout_menu_background_color": {
         "description": "Title background color image menu in the Pagebuilder Config Menu in the background area"
+    },
+    "pagebuilder_layout_menu_alignment_top_left": "top left",
+    "@pagebuilder_layout_menu_alignment_top_left": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_top_center": "top center",
+    "@pagebuilder_layout_menu_alignment_top_center": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_top_right": "top right",
+    "@pagebuilder_layout_menu_alignment_top_right": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_center_left": "center left",
+    "@pagebuilder_layout_menu_alignment_center_left": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_center": "center",
+    "@pagebuilder_layout_menu_alignment_center": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_center_right": "center right",
+    "@pagebuilder_layout_menu_alignment_center_right": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_bottom_left": "bottom left",
+    "@pagebuilder_layout_menu_alignment_bottom_left": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_bottom_center": "bottom center",
+    "@pagebuilder_layout_menu_alignment_bottom_center": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_alignment_bottom_right": "bottom right",
+    "@pagebuilder_layout_menu_alignment_bottom_right": {
+        "description": "Title for dropdown entry in the alignment menu in the pagebuilder config menu"
+    },
+    "pagebuilder_layout_menu_size_control_size": "Size",
+    "@pagebuilder_layout_menu_size_control_size": {
+        "description": "Title for size menu in pagebuilder layout menu"
+    },
+    "pagebuilder_layout_menu_size_control_width": "Width",
+    "@pagebuilder_layout_menu_size_control_width": {
+        "description": "Width for size menu in pagebuilder layout menu"
+    },
+    "pagebuilder_layout_menu_size_control_height": "Height",
+    "@pagebuilder_layout_menu_size_control_height": {
+        "description": "Height for size menu in pagebuilder layout menu"
+    },
+    "pagebuilder_image_config_title": "Image configuration",
+    "@pagebuilder_image_config_title": {
+        "description": "Title for image configuration in pagebuilder config menu"
+    },
+    "pagebuilder_image_config_content_mode": "Content mode",
+    "@pagebuilder_image_config_content_mode": {
+        "description": "title for content mode in image configuration in pagebuilder config menu"
+    },
+    "pagebuilder_image_config_image_overlay": "Image overlay",
+    "@pagebuilder_image_config_image_overlay": {
+        "description": "title for image overlay in image configuration in pagebuilder config menu"
+    },
+    "pagebuilder_image_config_border_radius": "Radius",
+    "@pagebuilder_image_config_border_radius": {
+        "description": "Title for radius in image configuration in pagebuilder config menu"
+    },
+    "pagebuilder_image_config_image_content": "Image content",
+    "@pagebuilder_image_config_image_content": {
+        "description": "Title for image content menu in pagebuilder config menu"
     }
 }
