--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1391,5 +1391,13 @@
     "pagebuilder_image_config_image_content": "Bild Inhalt",
     "@pagebuilder_image_config_image_content": {
         "description": "Titel für Bild Inhalt Menü im Pagebuilder Config Menü"
+    },
+    "landingpage_pagebuilder_container_config_container_title": "Container Konfiguration",
+    "@landingpage_pagebuilder_container_config_container_title": {
+        "description": "Titel der ausklappabren View für die Container Konfiguration in der Pagebuilder Container Konfiguration"
+    },
+    "landingpage_pagebuilder_container_config_container_shadow": "Schatten",
+    "@landingpage_pagebuilder_container_config_container_shadow": {
+        "description": "Titel für die Schatten Konfiguration in der Pagebuilder Container Konfiguration"
     }
 }
